deploy/aws/celery.yaml

# Celery Worker

apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  labels:
    deployment: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: celery-worker
  template:
    metadata:
      labels:
        pod: celery-worker
    spec:
      containers:
        - name: celery-worker
          image: umeshvjti/auth-service:latest
          imagePullPolicy: Always
          command: ['celery', '-A', 'config', 'worker', '-l', 'info']
---

# Celery Beat

apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat
  labels:
    app: celery-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: celery-beat
  template:
    metadata:
      labels:
        pod: celery-beat
    spec:
      containers:
        - name: celery-beat
          image: umeshvjti/auth-service:latest
          imagePullPolicy: Always
          command: ['celery', '-A', 'config', 'beat', '-l', 'info']
