deploy/aws/django.yaml

# Django Service

kind: Service
apiVersion: v1
metadata:
  name: django-service
spec:
  type: NodePort
  selector:
    component: django
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000

---

# Django Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  replicas: 1
  selector:
    matchLabels:
      component: django
  template:
    metadata:
      labels:
        component: django
    spec:
      containers:
        - name: django
          image: umeshvjti/auth-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
      imagePullSecrets:
      - name: regcred
