deploy/aws/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              serviceName: django-service
              servicePort: 8000
